--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  background: rgb(0, 3, 34);
+  color: rgb(255, 249, 239);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
