--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,13 +17,13 @@
   background: black;
   width: 640px;
   height: 360px;
+  box-shadow: 0 10px 18px 0px rgba(0, 0, 0, 0.2);
 }
 
 .footer {
   display: flex;
   flex: 1;
   padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
 }
